working on getting ships in there

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -4,6 +4,24 @@ $fa-font-path: "./../node_modules/@fortawesome/fontawesome-free/webfonts/"
 @import './../node_modules/@fortawesome/fontawesome-free/scss/solid'
 @import './../node_modules/@fortawesome/fontawesome-free/scss/brands'
 
+$text: #fff
+$text-light: #fff
+$text-strong: #fff
+$title-color: #fff
+$blue-dark: hsl(209.2, 87%, 25%)
+$blue: hsl(209.2, 82%, 35%)
+$blue-light: hsl(209.2, 77%, 45%)
+
+$info: $blue-dark
+$info-invert: $blue-light
+$link: $blue-light
+$link-invert: #fff
+$link-hover: #fff
+
+$dark: $blue-dark
+$body-background-color: $blue
+$table-background-color: $blue
+
 @import '../node_modules/bulma/bulma'
 
 .twitter
