selecting rows and stuff

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -21,6 +21,8 @@ $link-hover: #fff
 $dark: $blue-dark
 $body-background-color: $blue
 $table-background-color: $blue
+$table-color: #fff
+$table-row-active-background-color: $blue-light
 
 @import '../node_modules/bulma/bulma'
 
