adds components now

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -8,6 +8,7 @@ $text: #fff
 $text-light: #fff
 $text-strong: #fff
 $title-color: #fff
+$label-color: #fff
 $blue-dark: hsl(209.2, 87%, 25%)
 $blue: hsl(209.2, 82%, 35%)
 $blue-light: hsl(209.2, 77%, 45%)
