kind of forgot what this was supposed to be

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -34,3 +34,9 @@ $table-row-active-background-color: $blue-light
 .github
   color: $black !important // Override bulma
   border-color: #202020
+
+.spacer + .ship-description
+  padding-left: 2em
+
+.ship-description + .ship-description
+  padding-left: 0.25em
