--- a/sass/main.sass
+++ b/sass/main.sass
@@ -4,6 +4,11 @@ $fa-font-path: "./../node_modules/@fortawesome/fontawesome-free/webfonts/"
 @import './../node_modules/@fortawesome/fontawesome-free/scss/solid'
 @import './../node_modules/@fortawesome/fontawesome-free/scss/brands'
 
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap')
+
+$family-primary: "Roboto"
+$family-secondary: "Roboto"
+
 $text: #fff
 $text-light: #fff
 $text-strong: #fff
