added the remove functionality back in but gottverdammt it looks ugly

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -10,19 +10,19 @@ $family-primary: "Roboto"
 $family-secondary: "Roboto"
 
 $text: #fff
-$text-light: #fff
-$text-strong: #fff
-$title-color: #fff
-$label-color: #fff
+$text-light: darken($text, 5%)
+$text-strong: $text
+$title-color: $text
+$label-color: $text
 $blue-dark: hsl(209.2, 87%, 25%)
 $blue: hsl(209.2, 82%, 35%)
 $blue-light: hsl(209.2, 77%, 45%)
 
 $info: $blue-dark
 $info-invert: $blue-light
-$link: $blue-light
-$link-invert: #fff
-$link-hover: #fff
+$link: $text-light
+$link-invert: $text
+$link-hover: $text
 
 $dark: $blue-dark
 $body-background-color: $blue
