--- a/sass/main.sass
+++ b/sass/main.sass
@@ -49,7 +49,10 @@ $card-background-color: $blue
   color: $black !important // Override bulma
   border-color: #202020
 
-.spacer + .ship-description
+.ship-description-block + .ship-description-block
+  margin-top: 1em
+
+.ship-description-spacer + .ship-description
   padding-left: 2em
 
 .ship-description + .ship-description
