--- a/sass/main.sass
+++ b/sass/main.sass
@@ -64,5 +64,5 @@ $card-background-color: $blue
 .card-header-subtitle
   padding: 0.75rem
   
-.card-header-subtitle > i
+.card-header-subtitle > div > i
   padding-left: 0.25em
