--- a/sass/main.sass
+++ b/sass/main.sass
@@ -52,11 +52,11 @@ $card-background-color: $blue
 .ship-description-block + .ship-description-block
   margin-top: 1em
 
-.ship-description-spacer + .ship-description
-  padding-left: 2em
+.ship-description
+  display: inline-block
 
 .ship-description + .ship-description
-  padding-left: 0.25em
+  padding-left: 2em
 
 .card-header-icon
   color: white
