feat: save ship components across sessions

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -34,6 +34,12 @@ $card-background-color: $blue
 
 @import '../node_modules/bulma/bulma'
 
+.table tr.is-selected a
+  color: $black
+
+.button:hover
+  color: $black
+
 .card
   border: white dashed 2px
   border-radius: 12px
