--- a/src/AuroraBlueprints.UI/sass/main.sass
+++ b/src/AuroraBlueprints.UI/sass/main.sass
@@ -1,8 +1,8 @@
-$fa-font-path: "./../node_modules/@fortawesome/fontawesome-free/webfonts/"
-@import './../node_modules/@fortawesome/fontawesome-free/scss/fontawesome'
-@import './../node_modules/@fortawesome/fontawesome-free/scss/regular'
-@import './../node_modules/@fortawesome/fontawesome-free/scss/solid'
-@import './../node_modules/@fortawesome/fontawesome-free/scss/brands'
+$fa-font-path: "./../../../node_modules/@fortawesome/fontawesome-free/webfonts/"
+@import './../../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome'
+@import './../../../node_modules/@fortawesome/fontawesome-free/scss/regular'
+@import './../../../node_modules/@fortawesome/fontawesome-free/scss/solid'
+@import './../../../node_modules/@fortawesome/fontawesome-free/scss/brands'
 
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap')
 
@@ -32,7 +32,7 @@ $table-row-active-background-color: $blue-light
 
 $card-background-color: $blue
 
-@import '../node_modules/bulma/bulma'
+@import './../../../node_modules/bulma/bulma'
 
 .table tr.is-selected a
   color: $black
