feat: move ships and components tables to the side panel

--- a/src/AuroraBlueprints.UI/sass/main.sass
+++ b/src/AuroraBlueprints.UI/sass/main.sass
@@ -34,6 +34,11 @@ $card-background-color: $blue
 
 @import './../../../node_modules/bulma/bulma'
 
+.tabs li.is-active a
+  color: $black
+  background-color: $white
+  border-radius: 3px
+
 .table tr.is-selected a
   color: $black
 
